--- a/style.css
+++ b/style.css
@@ -8,8 +8,16 @@ body
     color: #fff;
     background-color: #4f92ba;
 
-    align-items: center;
     justify-content: center;
+}
+
+.app-container
+{
+      display: flex;
+      flex-direction: column;
+
+      align-items: center;
+      justify-content: center;
 }
 
 .identity-card
