--- a/style.css
+++ b/style.css
@@ -38,7 +38,12 @@ body
     background-color: #fff;
 
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between;;
+}
+
+.identity-card--picture
+{
+  margin-left: 30px;
 }
 
 .button
