--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body
       justify-content: center;
 }
 
-.identity-card
+.friend-card
 {
     display: flex;
     flex-direction: row;
@@ -41,7 +41,7 @@ body
     justify-content: space-between;;
 }
 
-.identity-card--picture
+.friend-card--picture
 {
   margin-left: 30px;
 }
